--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,21 @@ depthai = "*"
 numpy = "*"
 opencv-python = "*"
 textual = "*"
+pydantic = "*"
+pysdl2 = "*"
+pysdl2-dll = "*"
+pillow = "*"
+av = "*"
+psutil = "*"
+torch = "*"
+torchvision = "*"
+matplotlib = "*"
+dill = "*"
+dominate = "*"
+scipy = "*"
+reactivex = "*"
+rich = "*"
+textual-dev = "*"
 
 [dev-packages]
 
