--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
 opencv-python~=4.11.0.86
 numpy~=2.2.2
 depthai~=2.29.0.0
+torch~=2.6.0
+torchvision~=0.21.0
+pillow~=11.1.0
+dominate~=2.9.1
+dill~=0.3.9
+scipy~=1.15.1
+av~=14.1.0
+psutil~=6.1.1
+pydantic~=2.10.6
+setuptools~=75.8.0
+textual~=2.1.1
+reactivex~=4.0.4
+sympy~=1.13.1
+matplotlib~=3.10.0
+rich~=13.9.4
